--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -27,11 +27,13 @@ dist.dir=dist
 dist.jar=${dist.dir}/SQL-Analizer.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.flatlaf-1.0.jar=/Users/angel_p11/Documents/Java Helpers/flatlaf-1.0.jar
 file.reference.mysql-connector-java-5.1.49-bin.jar=/Users/angel_p11/Documents/Java Helpers/mysql-connector-java-5.1.49-bin.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.mysql-connector-java-5.1.49-bin.jar}
+    ${file.reference.mysql-connector-java-5.1.49-bin.jar}:\
+    ${file.reference.flatlaf-1.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
